case section added and overflow for mobile screen resolved

--- a/responsive.css
+++ b/responsive.css
@@ -5,12 +5,19 @@
     header {
         display: none;
     }
+    section {
+        margin-block: 5rem;
+    }
+
     .menu-icon {
         display: block;
         margin-inline: 50px;
     }
     .menu-icon i {
         font-size: 22px;
+    }
+    .home__section {
+        overflow: hidden;
     }
 
     .home__image__sub__container {
@@ -27,7 +34,8 @@
         opacity: 0.5;
     }
     .home__overview {
-        padding-inline: 15%;
+        width: 100%;
+        padding-inline: 10%;
         gap: 25px;
     }
     .home__title {
@@ -38,6 +46,7 @@
     }
     .home__desc {
         font-size: 16px;
+        width: 100%;
     }
 
     .action__container {
@@ -53,7 +62,6 @@
     /* specs styles  */
     .specs {
         margin-top: 10%;
-        width: 100%;
     }
     .specs__head__title {
         font-size: 42px;
@@ -74,7 +82,34 @@
         order: 1;
     }
     .specs__image {
-        width: 250px;
+        width: 200px;
+    }
+    /* case section style  */
+    .case {
+        gap: 6rem;
+    }
+    .case__title {
+        font-size: 42px;
+    }
+    .case__container {
+        display: flex;
+        flex-direction: column;
+        gap: 5rem;
+    }
+    .case__image__container {
+        width: 100%;
+    }
+    .case__content {
+        width: 100%;
+        gap: 5rem;
+    }
+    .case__content p {
+        width: 100%;
+        font-size: 18px;
+        line-height: 2rem;
+    }
+    .case__image {
+        width: 200px;
     }
 }
 @media only screen and (min-width: 572px) and (max-width: 767px) {
@@ -99,7 +134,6 @@
     }
     .home__overview {
         max-width: 350px;
-        padding-inline: 8%;
         gap: 25px;
     }
     .home__title {
@@ -160,7 +194,6 @@
     }
     .home__overview {
         max-width: 100%;
-        padding-inline: 4rem;
         gap: 2rem;
     }
     .home__title {
